--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -72,5 +72,6 @@ html {
     padding: 0.5rem;
     margin-top: 2rem ;
     background-color: black;
-    color: white;    
+    color: white;  
+    margin-bottom: 6rem;  
 }
