--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -11,65 +11,19 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans:wght@300&family=Roboto:wght@100;400&family=Rubik+Marker+Hatch&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/styles/header.css">
-    <link rel="stylesheet" href="/styles/register.css">
+    <link rel="stylesheet" href="/stylesheets/header.css">
+    <link rel="stylesheet" href="/stylesheets/register.css">
+    <link rel="stylesheet" href="/stylesheets/footer.css">
     <script src="https://kit.fontawesome.com/8945ba6e2e.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
-        <!--------- BARRA NAVEGADOR DESKTOP ---------->
-        <div class="interior">
-            <a href="/" class="logo-header-desk1" target="blank">
-                <img src="https://i.postimg.cc/7YbJJNCj/logo-negro.jpg" alt="Logo">
-            </a>
-            <div class="container-busqueda">
-                <input class="bar-busqueda" type="text" placeholder="Buscar">
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </div>
-            <nav class="navegacion">
-                <ul>
-                    <li>
-                        <a href="register.html" target="blank">Registrate
-                            <i class="fa-solid fa-id-card"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="login.html" target="blank">Iniciar Sesion
-                            <i class="fa-solid fa-user"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="productCart.html" target="blank">
-                            <i class="fa-solid fa-cart-shopping"></i>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-        <div class="interior2">
-            <nav class="navegacion2">
-                <ul>
-                    <li>
-                        <a href="" target="blank">Hombres</a>
-                    </li>
-                    <li>
-                        <a href="" target="blank">Mujeres</a>
-                    </li>
-                    <li>
-                        <a href="" target="blank">Niños</a>
-                    </li>
-                    <li class="submenu">
-                        <a href="productDetail.html" target="blank">Productos</a>
-                        <ul class="hijos">
-                            <li><a href="">Reebok</a></li>
-                            <li><a href="">Adidas</a></li>
-                            <li><a href="">Nike</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+    <!--------- BARRA NAVEGADOR CELULAR Y TABLET ---------->
+    <%- include('./partials/headerMobile.ejs') %> 
+
+    <!--------- BARRA NAVEGADOR DESKTOP ---------->
+    <%- include('./partials/headerDesktop.ejs') %> 
     </header>
 
 
@@ -116,6 +70,10 @@
 
         </form>
     </main>
+
+    <footer class="container-footer">
+        <%- include('./partials/footer.ejs') %> 
+    </footer>
 </body>
 
 </html>
