ultima actualizacion con los formatos JSON creados

--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -36,6 +36,8 @@
             <input class="campo" type="text" placeholder="Nombres">
             <input class="campo" type="text" placeholder="Apellidos">
             <input class="campo" type="email" placeholder="Correo Electrónico">
+            <input class="campo" type="password" placeholder="Contraseña">
+            <input class="campo" type="password" placeholder="Confirmar Contraseña">
             <input class="campo" type="number" placeholder="Télefono Celular">
             <select class="campo" name="" id="">
                 <option value="none" disabled selected>Elija su tipo de documento </option>
@@ -65,6 +67,12 @@
                 <input type="checkbox" name="tipousuario" required>
                 <span> Acepto resibir informacion sobre novedades, ofertas,descuentos, promociones,
                     eventos y mucho más</span>
+            </div>
+            <div class="container-image">
+                <label for="group-image">Imagen del grupo</label>
+                <div class="container-boton">
+                    <input type="file" name="group-image" id="group-image">
+                </div>
             </div>
             <button class="button" type="submit">Enviar</button>
 
