formulario de creacion

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -459,7 +459,7 @@
         <%- include('./partials/footer.ejs') %> 
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-    <script src="/slider.js"></script>
+    <script src="/javascripts/slider.js"></script>
 </body>
 
 </html>
