Formulario Register/base de datos Funcional

--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -17,7 +17,7 @@
             <div class="form-container">
                 <a href="/"><i class="fa-solid fa-circle-left fa-2x"></i></a>
                 <h1>registro</h1>
-                <form action="/register" method="POST">
+                <form action="/views/register" method="POST">
                     <div class="control">
                         <label for="nombre">Nombre completo</label>
                         <input type="text" name="nombre" id="nombre" value=usuario ? usario.nombre: ''>
