--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -28,14 +28,16 @@
                         <input type="password" name="password" id="password">
                     </div>
                     <div class="control">
-                        <input type="submit" value="Ingresar">
+                        <input id="submit" type="submit" value="Ingresar">
                     </div>
                 </form>
-                <div class="link-forgot-password">
-                    <a href="#">¿Olvidaste tu contraseña?</a>
-                </div>
-                <div class="link-forgot-password">
-                    <a href="/register">¿No tienes una cuenta? Crea una</a>
+                <div class="enlaces">
+                    <div id="register">
+                        <a href="#">¿No tienes una cuenta? Crea una?</a>
+                    </div>
+                    <div id="register">
+                        <a href="#">¿Olvidaste tu contraseña?</a>
+                    </div>
                 </div>
             </div>
         </section>
