--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,18 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans:wght@300&family=Roboto:wght@100;400&family=Rubik+Marker+Hatch&display=swap"
-        rel="stylesheet">
+    <%- include('./partials/head.ejs') %>
     <link href="stylesheets/index.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" rel="stylesheet">
     <!-- libreria de slider movil -->
-    <script src="https://kit.fontawesome.com/60737454c2.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" rel="stylesheet">     
     <title>ReeAdNi</title>
 </head>
 
