--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -1,192 +1,162 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Detalle del producto Readni</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="/stylesheets/productDetail.css" rel="stylesheet">
+    <link href="/stylesheets/cardsUp.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/60737454c2.js" crossorigin="anonymous"></script>
+  </head>
+  <body>
+    
+    <div class = "card-wrapper">
+      <div class = "cardProductDetail">
+        <!-- card left -->
+        <div class = "product-imgs">
+          <div class = "img-display">
+            <div class = "img-showcase">
+              <img src = "https://i.postimg.cc/QNnD3yvB/ta-1.webp" alt = "shoe image">
+              <img src = "https://i.postimg.cc/0QVsrWQB/ta-3.webp" alt = "shoe image">
+              <img src = "https://i.postimg.cc/VvTPWJX9/ta-4.webp" alt = "shoe image">
+              <img src = "https://i.postimg.cc/mDL4Lfb9/ta-2.webp" alt = "shoe image">
+            </div>
+          </div>
+          <div class = "img-select">
+            <div class = "img-item">
+              <a href = "#" data-id = "1">
+                <img src = "https://i.postimg.cc/QNnD3yvB/ta-1.webp" alt = "shoe image">
+              </a>
+            </div>
+            <div class = "img-item">
+              <a href = "#" data-id = "2">
+                <img src = "https://i.postimg.cc/0QVsrWQB/ta-3.webp" alt = "shoe image">
+              </a>
+            </div>
+            <div class = "img-item">
+              <a href = "#" data-id = "3">
+                <img src = "https://i.postimg.cc/VvTPWJX9/ta-4.webp" alt = "shoe image">
+              </a>
+            </div>
+            <div class = "img-item">
+              <a href = "#" data-id = "4">
+                <img src = "https://i.postimg.cc/mDL4Lfb9/ta-2.webp" alt = "shoe image">
+              </a>
+            </div>
+          </div>
+        </div>
+        <!-- card right -->
+                  <!-- Estrellas -->
+        <div class = "product-content">
+          <h2 class = "product-title">Pegasus 39</h2>
+          <a href = "#" class = "product-link">visita tienda NIKE</a>
+          <div class = "product-rating">
+            <i class = "fas fa-star"></i>
+            <i class = "fas fa-star"></i>
+            <i class = "fas fa-star"></i>
+            <i class = "fas fa-star"></i>
+            <i class = "fas fa-star-half-alt"></i>
+            <span>4.7(21)</span>
+          </div>
+                  
+          <div class = "product-price">
+            <p class = "last-price">Precio anterior: <span>$257.00</span></p>
+            <p class = "new-price">Precio en Oferta: <span>$249.00 (5%)</span></p>
+          </div>
 
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans:wght@300&family=Roboto:wght@100;400&family=Rubik+Marker+Hatch&display=swap" rel="stylesheet">
-   <link href="/stylesheets/header.css" rel="stylesheet">
-   <link href="/stylesheets/productDetail.css" rel="stylesheet">
-   <link href="/stylesheets/footer.css" rel="stylesheet">
-   <link href="styles/normalize.css" rel="stylesheet">
-   <script src="https://kit.fontawesome.com/8945ba6e2e.js" crossorigin="anonymous"></script>
-   <title>Document</title>
-</head>
+          <div class = "product-detail">
+            <h2>Información </h2>
+            <p>Año tras año, la Pegasus ha demostrado su valía ante corredores de todo el mundo. Ahora nuestro estilo más confiable regresa con innovaciones que destacan su identidad más que nunca. </p>
+            <p>Conocé la Nike Air Zoom Pegasus 39, confiable, cómoda y siempre lista para correr.</p>
+              <!-- apartado de check -->
+            <ul>
+              <li><i class="fa-sharp fa-solid fa-circle-check"></i>Color: <span>Negro</span></li>
+              <li><i class="fa-sharp fa-solid fa-circle-check"></i>Disponible: <span>Si</span></li>
+              <li><i class="fa-sharp fa-solid fa-circle-check"></i>Categoria: <span>Tenis Deportivos</span></li>
+              <li><i class="fa-sharp fa-solid fa-circle-check"></i>Genero: <span>Hombre</span></li>
+            </ul>
+          </div>
 
-<body>
-   <header>
-   <!--------- BARRA NAVEGADOR CELULAR Y TABLET ---------->
-   <%- include('./partials/headerMobile.ejs') %> 
-
-   <!--------- BARRA NAVEGADOR DESKTOP ---------->
-   <%- include('./partials/headerDesktop.ejs') %> 
-   </header>
-
-   <section class="calzado-zapatos">
-      <div class="texto-calzado">
-         <h1> CALZADO Y ZAPATOS PARA HOMBRE </h1>
+          <div class = "purchase-info">
+            <input type = "number" min = "0" value = "1">
+            <button type = "button" class = "btn">
+              Agregar al Carrito <i class = "fas fa-shopping-cart"></i>
+            </button>
+            
+          </div>
+                 <!-- apartado de compartir -->
+          <div class = "social-links">
+            <p>compartir: </p>
+            <a href = "#">
+              <i class = "fab fa-facebook-f"></i>
+            </a>
+            <a href = "#">
+              <i class = "fab fa-twitter"></i>
+            </a>
+            <a href = "#">
+              <i class = "fab fa-instagram"></i>
+            </a>
+            <a href = "#">
+              <i class = "fab fa-whatsapp"></i>
+            </a>
+            <a href = "#">
+              <i class = "fab fa-pinterest"></i>
+            </a>
+          </div>
+        </div>
       </div>
-      <div class="texto-catálogo">
-         <H4> Un amplio catálogo de calzado de hombre adidas con los mejores diseños exclusivos y tecnología.</H4>
+    </div>
+
+    <!------------------APARTADO DE INTERESES---------------------------------->
+    <div class="container">
+      <!-- CARDS -->
+      <div class="card">
+          <img src="https://i.postimg.cc/RZCtTPTN/jordan1.png" alt="" class="card__img">
+          <!-- <div class="card__content">  -->
+          <div class="card__data">
+              <h1 class="card__title">Nike Air Jordan</h1>
+              <span class="card__preci">$120.000</span>
+              <p class="card__description">Nike Air Jordan Especiales para jugar baloncesto.</p>
+              <a href="#" class="card__button">Mas Información!</a>
+          </div>
       </div>
-      <div class="navbar-final">
-         <nav>
-            <a class="a2" href="#"> Ver todo el calzado </a>
-            <a class="a2" href="#"> Novedades </a>
-            <a class="a2" href="#"> Runing </a>
-            <a class="a2" href="#"> Training </a>
-            <a class="a2" href="#"> Tennis </a>
-            <a class="a2" href="#"> Originals </a>
-            <a class="a2" href="#"> Performance </a>
-            <a class="a2" href="#"> Superstar </a>
-            <a class="a2" href="#"> Forum </a>
-            <a class="a2" href="#"> Zx </a>
-            <a class="a2" href="#"> Outlet </a>
+      <!-- CARDS -->
+      <div class="card">
+          <img src="https://i.postimg.cc/nzXg9YWW/jordan2.png" alt="" class="card__img">
+          <!-- <div class="card__content">  -->
+          <div class="card__data">
+              <h1 class="card__title">Nike Air Jordan</h1>
+              <span class="card__preci">$120.000</span>
+              <p class="card__description">Nike Air Jordan Especiales para jugar baloncesto.</p>
+              <a href="#" class="card__button">Mas Información!</a>
+          </div>
       </div>
-   </section>
-
-   <main class="container">
-      <div class="banner">
-         <img src="https://i.postimg.cc/NfC70XSw/images.jpg" alt=" banner">
+      <!-- CARDS -->
+      <div class="card">
+          <img src="https://i.postimg.cc/RZCtTPTN/jordan1.png" alt="" class="card__img">
+          <!-- <div class="card__content">  -->
+          <div class="card__data">
+              <h1 class="card__title">Nike Air Jordan</h1>
+              <span class="card__preci">$120.000</span>
+              <p class="card__description">Nike Air Jordan Especiales para jugar baloncesto.</p>
+              <a href="#" class="card__button">Mas Información!</a>
+          </div>
       </div>
+      <!-- CARDS -->
+      <div class="card">
+          <img src="https://i.postimg.cc/nzXg9YWW/jordan2.png" alt="" class="card__img">
+          <!-- <div class="card__content">  -->
+          <div class="card__data">
+              <h1 class="card__title">Nike Air Jordan</h1>
+              <span class="card__preci">$120.000</span>
+              <p class="card__description">Nike Air Jordan Especiales para jugar baloncesto.</p>
+              <a href="#" class="card__button">Mas Información!</a>
+          </div>
+      </div>
+  </div>
+    
+    <script src="/javascripts/productDetail.js"></script>
 
-      <section class="section-container">
-         <div>
-            <a class="card" href="#">
-               <div class="imageproducto">
-                  <img src="https://i.postimg.cc/QdPbf7Jq/adidas-performance-0763.jpg" alt="adidas gris">
-               </div>
-               <div class="textoprecio">
-                  <h4>Adidas Performance</h4>
-                  <p> Tennis Runing Gris Multicolor</p>
-                  <p> $520.900</p>
-                  <a href="productCart.html">
-                  <span class="addcar"> Agregar al carrito </span><span class="addvista">Vista</span>
-                  </a>
-               </div>
-            </a>
-         </div>
-
-         <div class="cardproducto">
-            <a class="card" href="#">
-               <div class="imageproducto">
-                  <img src="https://i.postimg.cc/rwzjGjxm/adidas-performance-3007.jpg" alt="adidas Azul">
-               </div>
-               <div class="textoprecio">
-                  <h4>Adidas Performance</h4>
-                  <p> Tennis Runing Azúl</p>
-                  <p> $520.900</p>
-                  <span class="addcar"> Agregar al carrito </span><span class="addvista">Vista</span>
-               </div>
-            </a>
-         </div>
-
-         <div class="cardproducto">
-            <a class="card" href="#">
-               <div class="imageproducto">
-                  <img src="https://i.postimg.cc/fb9vpbHQ/adidas-performance-3089.jpg" alt="adidas gris">
-               </div>
-               <div class="textoprecio">
-                  <h4>Adidas Originals</h4>
-                  <p> Tennis Runing Gris Multicolor</p>
-                  <p> $520.900</p>
-                  <span class="addcar"> Agregar al carrito </span><span class="addvista">Vista</span>
-               </div>
-            </a>
-         </div>
-
-         <div class="cardproducto">
-            <a class="card" href="#">
-               <div class="imageproducto">
-                  <img src="https://i.postimg.cc/fb9vpbHQ/adidas-performance-3089.jpg" alt="adidas verde">
-               </div>
-               <div class="textoprecio">
-                  <h4>Adidas Performance</h4>
-                  <p> Tennis Runing Azúl Multicolor</p>
-                  <p> $520.900</p>
-                  <span class="addcar"> Agregar al carrito </span> <span class="addvista">Vista</span>
-               </div>
-            </a>
-         </div>
-
-         <div class="cardproducto">
-            <a class="card" href="#">
-               <div class="imageproducto">
-                  <img src="https://i.postimg.cc/XJKkNzS2/adidas-performance-5807.jpg" alt="adidas negro">
-               </div>
-               <div class="textoprecio">
-                  <h4>Adidas Performance</h4>
-                  <p> Tennis Runing Negro</p>
-                  <p> $520.900</p>
-                  <span class="addcar"> Agregar al carrito </span><span class="addvista">Vista</span>
-               </div>
-            </a>
-         </div>
-
-         <div class="cardproducto">
-            <a class="card" href="#">
-               <div class="imageproducto">
-                  <img src="https://i.postimg.cc/BbqcjBJJ/adidas-performance-5936.jpg" alt="adidas negro">
-               </div>
-               <div class="textoprecio">
-                  <h4>Adidas Performance</h4>
-                  <p> Tennis Training Negro</p>
-                  <p> $520.900</p>
-                  <span class="addcar"> Agregar al carrito </span><span class="addvista">Vista</span>
-               </div>
-            </a>
-         </div>
-
-         <div class="cardproducto">
-            <a class="card" href="#">
-               <div class="imageproducto">
-                  <img src="https://i.postimg.cc/WzXmgq4g/adidas-performance-6614.jpg" alt="adidas gris">
-               </div>
-               <div class="textoprecio">
-                  <h4>Adidas Zx</h4>
-                  <p> Tennis Runing Negro</p>
-                  <p> $520.900</p>
-                  <span class="addcar"> Agregar al carrito </span><span class="addvista">Vista</span>
-               </div>
-            </a>
-         </div>
-
-         <div class="cardproducto">
-            <a class="card" href="#">
-               <div class="imageproducto">
-                  <img src="https://i.postimg.cc/G3QxZVjt/adidas-performance-6885.jpg" alt="adidas gris">
-               </div>
-               <div class="textoprecio">
-                  <h4>Adidas Originals</h4>
-                  <p> Tennis Runing Negro</p>
-                  <p> $520.900</p>
-                  <span class="addcar"> Agregar al carrito </span><span class="addvista">Vista</span>
-               </div>
-            </a>
-         </div>
-
-         <div class="cardproducto">
-            <a class="card" href="#">
-               <div class="imageproducto">
-                  <img src="https://i.postimg.cc/8PzmD4yH/adidas-performance-7624.jpg" alt="adidas negro">
-               </div>
-               <div class="textoprecio">
-                  <h4>Adidas Originals</h4>
-                  <p> Tennis Training Negro</p>
-                  <p> $520.900</p>
-                  <span class="addcar"> Agregar al carrito </span><span class="addvista">Vista</span>
-               </div>
-            </a>
-         </div>
-      </section>
-   </main>
-   <footer class="container-footer">
-      <%- include('./partials/footer.ejs') %> 
-   </footer>
-
-</body>
-
+  </body>
 </html>
